base/01-resources/003-chat/01-matrix/00-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-deploy
  namespace: matrix
  labels:
    environment: extern
    app: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
  template:
    metadata:
      labels:
        app: matrix
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9092"
    spec:
      volumes:
        - name: vol
          nfs:
            server: NODE_IP #TODO
            path: /mnt/data/matrix
      containers:
        - name: matrix
          image:  matrixdotorg/synapse:latest
          volumeMounts:
            - name: vol
              mountPath: /data
          ports:
            - containerPort: 8448
              name: web
